[DOCS]: Updated activity diagrams